--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>---</p>
             <p>Hey There! I am Ansh Choudhary, Senior at BITS Pilani.</p>
             <p>An aspiring computer science student with strong interest in coding and ML/AI.</p>
-            <p>Currently working as a Data Analyst at Sharaf DG in Dubai and conducting research at NYU Abu Dhabi.</p>
+            <p>Currently working as an AI Engineer Intern at Deriv in Dubai and conducting research at NYU Abu Dhabi.</p>
             <p>---</p>
             <p>To access the list of available commands, just enter "<span style="color:#00ff00;">help</span>".</p>
             <p class="prompt"><span contenteditable="true" class="user-input"></span></p>
