--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </div>
         <div class="terminal-body">
             <p>---</p>
-            <p>Hey There! I am Ansh Choudhary, Senior at BITS Pilani.</p>
+            <p>Hey There! I am Ansh Choudhary, AI Engineer at Deriv.</p>
             <p>An aspiring computer science student with strong interest in coding and ML/AI.</p>
-            <p>Currently working as an AI Engineer Intern at Deriv in Dubai and conducting research at NYU Abu Dhabi.</p>
+            <p>Currently working as an AI Engineer at Deriv in Dubai and conducting research at NYU Abu Dhabi.</p>
             <p>---</p>
             <p>To access the list of available commands, just enter "<span style="color:#00ff00;">help</span>".</p>
             <p class="prompt"><span contenteditable="true" class="user-input"></span></p>
